k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2401032"
  labels:
    name: "2401032"
    student-id: "2401032"
    environment: production
